# kwavers

./: .gitignore  .gitmodules  .model-impl-fixup-sha  .slice-3-sha  .slice-4-sha  .slice-5-sha  .slice-6-sha  ACCURATE_MODULE_ARCHITECTURE.md  ACOUSTICS_OPTICS_RESEARCH_GAP_AUDIT_2025.md  ADVANCED_HYBRID_SOLVER_SUMMARY.md  ANALYTICAL_TEST_IMPROVEMENTS.md  ARCHITECTURAL_AUDIT_SPRINT_ANALYSIS.md  ARCHITECTURAL_REFACTORING_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS_EXECUTIVE_SUMMARY.md  ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_CLEANUP_SUMMARY.md  ARCHITECTURE_COMPLIANCE_REPORT.md  ARCHITECTURE_FIX_PROGRESS.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  ARCHITECTURE_REFACTORING_AUDIT.md  ARCHITECTURE_REFACTORING_EXECUTION_PLAN.md  ARCHITECTURE_REMEDIATION_PLAN.md  ARCHITECTURE_VALIDATION_REPORT.md  AUDIT_COMPLETE_SESSION_SUMMARY.md  AUDIT_COMPLETE_SUMMARY.md  AUDIT_COMPLETION_SUMMARY.md  AUDIT_DELIVERABLES.md  AUDIT_DELIVERABLES_README.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_FIX_CHECKLIST.md  AUDIT_PHASE5_COMPLETE.md  AUDIT_QUICK_REFERENCE.txt  AUDIT_REPORT.md  AUDIT_SUMMARY_2026_01_29.md  BORN_SERIES_AUDIT_COMPLETION_REPORT.md  BUG_FIXES_AND_IMPROVEMENTS.md  BUILD_AND_TEST_FIXES_SUMMARY.md  BUILD_FIXES.md  (+348 more)
crates/kwavers/: Cargo.toml  build.rs  deny.toml
crates/kwavers-analysis/: Cargo.toml
crates/kwavers-analysis/src/: lib.rs
crates/kwavers-boundary/: Cargo.toml
crates/kwavers-boundary/src/: lib.rs  parallel.rs
crates/kwavers-core/: Cargo.toml
crates/kwavers-core/src/: lib.rs  units.rs
crates/kwavers-diagnostics/: Cargo.toml
crates/kwavers-diagnostics/src/: lib.rs
crates/kwavers-domain/: Cargo.toml
crates/kwavers-domain/src/: lib.rs
crates/kwavers-driver/: CHANGELOG.md  Cargo.toml  README.md  backlog.md  checklist.md  gap_audit.md
crates/kwavers-driver/.config/: nextest.toml
crates/kwavers-driver/docs/: ADR-001-architecture.md  ARCHITECTURE.md  DFM.md  MIGRATION.md  PHASE_1_prelude_plan.md  article_vs_current_stack.md  beamforming_validation.md  component_cad_inventory.md  connector_cad_inventory.md  output_layout.md
crates/kwavers-field/: Cargo.toml
crates/kwavers-field/src/: lib.rs  (+7 more)
crates/kwavers-gpu/: Cargo.toml
crates/kwavers-grid/: Cargo.toml
crates/kwavers-imaging/: Cargo.toml
crates/kwavers-math/: Cargo.toml
crates/kwavers-medium/: Cargo.toml
crates/kwavers-mesh/: Cargo.toml
crates/kwavers-optics/: Cargo.toml
crates/kwavers-phantom/: Cargo.toml
crates/kwavers-physics/: Cargo.toml
crates/kwavers-python/: Cargo.toml  README.md  pyproject.toml  test.py
crates/kwavers-receiver/: Cargo.toml
crates/kwavers-signal/: Cargo.toml
crates/kwavers-simulation/: Cargo.toml
crates/kwavers-solver/: Cargo.toml
crates/kwavers-source/: Cargo.toml
crates/kwavers-therapy/: Cargo.toml
crates/kwavers-transducer/: Cargo.toml
pykwavers/: Cargo.toml  README.md  conftest.py  kw_results.npz  py_out.txt  pyproject.toml  report.txt  requirements.txt  test_out.txt  test_out_comp.txt  test_out_examples.txt
pykwavers/docs/: KWAVE_PYKWAVERS_DIFFERENCES.md  PSTD_PHASED_ARRAY_GPU_PROFILE_2026-04-02.md
pykwavers/examples/: _run_julia_parity_sweep.py  _run_parity_sweep.py  _triage_missing_pngs.py  analyze_scan_lines.py  array_source_utils.py  at_array_as_sensor_compare.py  at_array_as_source_compare.py  at_array_as_source_outputs.py  at_circular_piston_3D_compare.py  at_circular_piston_AS_compare.py  at_focused_annular_array_3D_compare.py  at_focused_annular_array_3D_full_compare.py  at_focused_annular_array_3D_mask_compare.py  at_focused_annular_array_3D_weights_compare.py  at_focused_bowl_3D_compare.py  at_linear_array_transducer_compare.py  at_linear_array_transducer_mask_compare.py  canonical_comparison.py  check_cache.py  checkpointing_compare.py  compare_2d.py  compare_all_simulators.py  compare_initial_pressure.py  compare_log.txt  compare_point_source.py  compare_pr_2D_FFT_line_sensor.py  compare_pr_2D_TR_line_sensor.py  compare_pr_3D_FFT_planar_sensor.py  compare_pr_3D_TR_planar_sensor.py  compare_us_transducer.py  diag_phased_array_post_process_stages.py  diag_propagation_step.py  diag_snells_law_basis.py  diag_vel.py  diff_bioheat_1d_jl_compare.py  diff_focused_hifu_skull_modulation.py  diff_focused_ultrasound_heating_compare.py  diff_homogeneous_medium_source_compare.py  elastic_propagation_smoke.py  ewp_3D_simulation_compare.py  (+62 more)
pykwavers/src/: analytical_bindings.rs  book_bindings.rs  breast_fwi_bindings.rs  fft_bindings.rs  field_surrogate_bindings.rs  kwave_array_py.rs  lib.rs  medium_py.rs  misc_bindings.rs  pam_bindings.rs  seismic_bindings.rs  sensor_py.rs  simulation_result_py.rs  solver_type_bindings.rs  theranostic_bindings.rs  thermal_bindings.rs  utils_bindings.rs
pykwavers/tests/: comparison_report.py  kw_res_raw.npy  kwa_res_final.npy  kwa_res_raw.npy  test_abdominal_fwi_chapter.py  test_absorption_parity.py  test_ali2025_discrete_green.py  test_ali2025_replication_example.py  test_apollo_fft_utils.py  test_basic.py  test_bem_solver.py  test_bindings_surface.py  test_book_therapy_chapters.py  test_bubble_cloud_parity.py  test_dg_solver.py  test_example_parity_utils.py  test_examples_parity.py  test_gpu_pstd_medium_profile.py  test_grid_parity.py  test_helmholtz_solver.py  test_heterogeneous_medium_parity.py  test_heterogeneous_parity.py  test_ivp_parity.py  test_kwave_comparison.py  test_kwave_example_at_array_as_sensor_parity.py  test_kwave_example_at_array_as_source_parity.py  test_kwave_example_at_focused_bowl_3d_parity.py  test_kwave_example_at_linear_array_transducer_parity.py  test_kwave_example_checkpointing_parity.py  test_kwave_example_ivp_photoacoustic_waveforms_parity.py  test_kwave_example_ivp_saving_movie_parity.py  test_kwave_example_na_controlling_the_pml_parity.py  test_kwave_example_na_optimising_performance_parity.py  test_kwave_example_pressure_source_order_contract.py  test_kwave_example_us_bmode_linear_transducer_parity.py  test_kwave_example_us_bmode_phased_array_parity.py  test_kwave_validation.py  test_medium_parity.py  test_new_utils_parity.py  test_optical_fluence_parity.py  (+20 more)
(+13853 files in other folders)
