[workspace]
members = ["crates/kwavers", "xtask", "crates/kwavers-python", "crates/kwavers-core", "crates/kwavers-math", "crates/kwavers-signal", "crates/kwavers-grid", "crates/kwavers-field", "crates/kwavers-optics", "crates/kwavers-medium", "crates/kwavers-mesh", "crates/kwavers-phantom", "crates/kwavers-boundary", "crates/kwavers-source", "crates/kwavers-receiver", "crates/kwavers-transducer", "crates/kwavers-imaging", "crates/kwavers-physics", "crates/kwavers-solver", "crates/kwavers-analysis", "crates/kwavers-simulation", "crates/kwavers-diagnostics", "crates/kwavers-therapy", "crates/kwavers-gpu", "crates/kwavers-driver"]
resolver = "2"

[workspace.dependencies]
# External git submodules replaced by remote git dependencies (always-latest on the
# default branch; `cargo update -p <crate>` refreshes the pinned commit in Cargo.lock).
# These repos carry their own [workspace], so Cargo resolves their internal
# inheritance against THEIR roots — no path scaffolding needed here. SSOT: members
# inherit via `{ workspace = true }`.
ritk-core = { git = "https://github.com/ryancinsight/ritk" }
ritk-io = { git = "https://github.com/ryancinsight/ritk" }
ritk-registration = { git = "https://github.com/ryancinsight/ritk" }
apollo = { git = "https://github.com/ryancinsight/apollo", rev = "e1a9a1ac42040832a0152c4c166d066d04ab097e", package = "apollo-fft" }
apollofft-wgpu = { git = "https://github.com/ryancinsight/apollo", rev = "e1a9a1ac42040832a0152c4c166d066d04ab097e", package = "apollo-fft-wgpu" }
moirai-parallel = { git = "https://github.com/ryancinsight/Moirai.git", package = "moirai-parallel", default-features = false, features = ["parallel"] }
burn = { version = "0.19", features = ["wgpu", "autodiff"] }
burn-ndarray = "0.19"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
dicom = "0.8.0"
nifti = "0.17.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.9"
ndarray = { version = "0.16", features = ["rayon"] }
gaia = { git = "https://github.com/ryancinsight/gaia", default-features = false }
tempfile = "3.10"
proptest = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
charls = { version = "0.4", features = ["static"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
indicatif = "0.17"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
image = "0.24"
jpeg-decoder = "0.3.2"
tiff = "0.9"
onnx-ir = "0.20.1"
openjpeg-sys = "1.0"
openjp2 = { version = "0.6.1", default-features = false, features = ["std"] }
jpeg2k = { version = "0.10.1", default-features = false, features = ["openjp2"] }
dicom-core = "0.8"
dicom-ul = "0.8"
dicom-pixeldata = { version = "0.8", features = ["native"] }
dicom-transfer-syntax-registry = { version = "0.8", features = ["native", "jpegxl", "charls", "openjp2"] }
consus-hdf5 = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-core = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-compression = { git = "https://github.com/ryancinsight/consus", features = ["std", "deflate"] }
consus-io = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
rand = "0.9"
criterion = "0.5"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[profile.dev]
# opt-level = 1: basic dead-code elimination, inlining, and loop optimisation.
# Keeps debug symbols and unoptimised codegen units while making FFT-heavy test
# kernels (PSTD phase-velocity, KZK conservation) ~5–10× faster than opt-level=0.
opt-level = 1

# Optimise *dependencies* (ndarray, rustfft/apollo-fft, and workspace crates like
# kwavers-solver/kwavers-math when they are dependencies of the crate under test)
# at -O3 in dev/test builds, while the crate under active development keeps the
# fast opt-level=1 codegen above. Dependencies are compiled once and cached, so
# this is a one-time build cost that makes the FFT/stencil-heavy integration
# tests (fdtd_pstd_comparison, property_based_tests) run at near-release speed,
# clearing the 60 s per-test nextest cap without weakening any assertion. Uses the
# default high codegen-units and no LTO, so it adds no build-time memory pressure
# (unlike [profile.release] below, whose lto=true + codegen-units=1 is for the
# Python wheel only and is what OOMs when building many test binaries in release).
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Strip symbols for smaller Python wheels
