[workspace]
members = ["crates/kwavers", "xtask", "crates/kwavers-python", "crates/kwavers-core", "crates/kwavers-math", "crates/kwavers-signal", "crates/kwavers-grid", "crates/kwavers-field", "crates/kwavers-optics", "crates/kwavers-medium", "crates/kwavers-mesh", "crates/kwavers-phantom", "crates/kwavers-boundary", "crates/kwavers-source", "crates/kwavers-receiver", "crates/kwavers-transducer", "crates/kwavers-imaging", "crates/kwavers-physics", "crates/kwavers-solver", "crates/kwavers-analysis", "crates/kwavers-simulation", "crates/kwavers-diagnostics", "crates/kwavers-therapy", "crates/kwavers-gpu", "crates/kwavers-driver"]
resolver = "2"

[workspace.dependencies]
aequitas = { version = "0.1.0", git = "https://github.com/ryancinsight/aequitas", default-features = false, features = ["std"] }
asclepius = { version = "0.1.0", git = "https://github.com/ryancinsight/asclepius", default-features = false, features = ["std"] }
hyperion = { version = "0.1.0", git = "https://github.com/ryancinsight/hyperion" }
proteus = { version = "0.1.0", git = "https://github.com/ryancinsight/proteus" }
tyche-core = { version = "0.1.0", git = "https://github.com/ryancinsight/tyche" }
# External git submodules replaced by remote git dependencies (always-latest on the
# default branch; `cargo update -p <crate>` refreshes the pinned commit in Cargo.lock).
# These repos carry their own [workspace], so Cargo resolves their internal
# inheritance against THEIR roots — no path scaffolding needed here. SSOT: members
# inherit via `{ workspace = true }`.
ritk-core = { path = "../ritk/crates/ritk-core" }
ritk-io = { path = "../ritk/crates/ritk-io" }
ritk-image = { path = "../ritk/crates/ritk-image" }
ritk-spatial = { path = "../ritk/crates/ritk-spatial" }
ritk-registration = { path = "../ritk/crates/ritk-registration" }
coeus-core = { path = "../coeus/coeus-core" }
coeus-tensor = { path = "../coeus/coeus-tensor" }
coeus-autograd = { path = "../coeus/coeus-autograd" }
coeus-nn = { path = "../coeus/coeus-nn" }
coeus-optim = { path = "../coeus/coeus-optim" }
coeus-ops = { path = "../coeus/coeus-ops" }
apollo = { path = "../apollo/crates/apollo-fft", package = "apollo-fft" }
hephaestus-core = { path = "../hephaestus/crates/hephaestus-core", default-features = false }
hephaestus-wgpu = { path = "../hephaestus/crates/hephaestus-wgpu", default-features = false, features = ["decomposition"] }
hephaestus-cuda = { path = "../hephaestus/crates/hephaestus-cuda", default-features = false }
hermes-simd = { path = "../hermes/crates/hermes-simd", default-features = false, features = ["std"] }
moirai-parallel = { path = "../moirai/moirai-parallel", default-features = false, features = ["parallel"] }
leto = { git = "https://github.com/ryancinsight/leto.git", default-features = false, features = ["std"] }
leto-ops = { git = "https://github.com/ryancinsight/leto.git", default-features = false, features = ["std"] }
eunomia = { version = "0.7.0", git = "https://github.com/ryancinsight/eunomia", default-features = false, features = ["std"] }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"

anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gaia = { path = "../gaia", default-features = false }
tempfile = "3.10"
stats_alloc = "0.1.10"
proptest = "1.0"
walkdir = "2.4"
charls = { version = "0.4", features = ["static"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
indicatif = "0.17"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
image = "0.24"
jpeg-decoder = "0.3.2"
tiff = "0.9"
onnx-ir = "0.20.1"
openjpeg-sys = "1.0"
openjp2 = { version = "0.6.1", default-features = false, features = ["std"] }
jpeg2k = { version = "0.10.1", default-features = false, features = ["openjp2"] }
consus-hdf5 = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-core = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-compression = { git = "https://github.com/ryancinsight/consus", features = ["std", "deflate"] }
consus-io = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-npy = { git = "https://github.com/ryancinsight/consus", branch = "codex/consus-npy-provider" }
rand = "0.9"
criterion = "0.5"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[profile.dev]
# opt-level = 1: basic dead-code elimination, inlining, and loop optimisation.
# Keeps debug symbols and unoptimised codegen units while making FFT-heavy test
# kernels (PSTD phase-velocity, KZK conservation) ~5–10× faster than opt-level=0.
opt-level = 1

[profile.coverage]
inherits = "dev"

[profile.coverage.package."*"]
# Ptrace instrumentation multiplies the FFT-heavy full-grid runtime. Keep that
# purpose-specific suite within its existing finite timeout without changing
# the ordinary development profile, test workload, or timeout contract.
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Strip symbols for smaller Python wheels

[patch."https://github.com/ryancinsight/leto.git"]
leto = { path = "../leto/crates/leto" }
leto-ops = { path = "../leto/crates/leto-ops" }

[patch."https://github.com/ryancinsight/eunomia"]
eunomia = { path = "../eunomia/crates/eunomia" }

[patch."https://github.com/ryancinsight/eunomia.git"]
eunomia = { path = "../eunomia/crates/eunomia" }

[patch."https://github.com/ryancinsight/hephaestus.git"]
hephaestus-core = { path = "../hephaestus/crates/hephaestus-core" }
hephaestus-wgpu = { path = "../hephaestus/crates/hephaestus-wgpu" }
hephaestus-cuda = { path = "../hephaestus/crates/hephaestus-cuda" }

[patch."https://github.com/ryancinsight/apollo.git"]
apollo-fft = { path = "../apollo/crates/apollo-fft" }
apollo-fft-macros = { path = "../apollo/crates/apollo-fft-macros" }
apollo-leto-interop = { path = "../apollo/crates/apollo-leto-interop" }

[patch."https://github.com/ryancinsight/Mnemosyne.git"]
mnemosyne = { path = "../mnemosyne/crates/mnemosyne" }
mnemosyne-arena = { path = "../mnemosyne/crates/mnemosyne-arena" }
mnemosyne-backend = { path = "../mnemosyne/crates/mnemosyne-backend" }
mnemosyne-core = { path = "../mnemosyne/crates/mnemosyne-core" }
mnemosyne-decay = { path = "../mnemosyne/crates/mnemosyne-decay" }
mnemosyne-hardened = { path = "../mnemosyne/crates/mnemosyne-hardened" }
mnemosyne-heap = { path = "../mnemosyne/crates/mnemosyne-heap" }
mnemosyne-local = { path = "../mnemosyne/crates/mnemosyne-local" }
mnemosyne-prof = { path = "../mnemosyne/crates/mnemosyne-prof" }

[patch."https://github.com/ryancinsight/Moirai.git"]
moirai = { path = "../moirai/moirai" }
moirai-async = { path = "../moirai/moirai-async" }
moirai-core = { path = "../moirai/moirai-core" }
moirai-executor = { path = "../moirai/moirai-executor" }
moirai-gpu = { path = "../moirai/moirai-gpu" }
moirai-iter = { path = "../moirai/moirai-iter" }
moirai-pal = { path = "../moirai/moirai-pal" }
moirai-parallel = { path = "../moirai/moirai-parallel" }
moirai-scheduler = { path = "../moirai/moirai-scheduler" }
moirai-sync = { path = "../moirai/moirai-sync" }
moirai-utils = { path = "../moirai/moirai-utils" }

[patch."https://github.com/ryancinsight/themis"]
themis = { path = "../themis" }

[patch."https://github.com/ryancinsight/hermes.git"]
hermes-simd = { path = "../hermes/crates/hermes-simd" }
hermes-simd-core = { path = "../hermes/crates/hermes-simd-core" }

[patch."https://github.com/ryancinsight/melinoe.git"]
melinoe = { path = "../melinoe" }

[patch.crates-io]
melinoe = { path = "../melinoe" }
