[package]
name = "pykwavers"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Python bindings for kwavers ultrasound simulation library"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"
keywords = ["ultrasound", "simulation", "python", "pyo3", "k-wave"]
categories = ["science", "simulation", "medical"]

[lib]
name = "pykwavers"
crate-type = ["cdylib"]  # Dynamic library for Python import

[dependencies]
# Core kwavers library
kwavers = { path = "../kwavers", default-features = false, features = ["minimal"] }

# PyO3 for Python bindings
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py38"] }
numpy = "0.27"  # ndarray ↔ numpy conversions

# Essential numerical computing (re-export from kwavers)
# Note: Must match burn's ndarray requirement (0.16.1) and numpy 0.27 supports this
ndarray = { version = "=0.16.1", features = ["rayon", "serde"] }
num-complex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization for caching comparison results
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Python testing via pytest-benchmark will be used externally
# No Rust dev dependencies needed for bindings

[features]
default = ["minimal"]
minimal = []
gpu = ["kwavers/gpu"]
plotting = ["kwavers/plotting"]
full = ["kwavers/full"]

# Profiles are defined at workspace root (Cargo.toml)
