[package]
name = "kwavers-analysis"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Analysis layer for kwavers: signal processing, beamforming, validation, ML/uncertainty, performance, plotting/visualization"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
kwavers-core = { path = "../kwavers-core" }
kwavers-math = { path = "../kwavers-math" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-transducer = { path = "../kwavers-transducer" }
kwavers-receiver = { path = "../kwavers-receiver" }
kwavers-medium = { path = "../kwavers-medium" }
kwavers-field = { path = "../kwavers-field" }
kwavers-signal = { path = "../kwavers-signal" }
kwavers-solver = { path = "../kwavers-solver" }
ndarray = { version = "0.16", features = ["serde"] }
leto = { workspace = true }
moirai-parallel = { workspace = true }
num-complex = "0.4"
num-traits = "0.2"
nalgebra = { version = "0.32" }
rand = "0.8"
log = "0.4"
anyhow = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
# Optional GPU visualization dependencies.
wgpu = { version = "26.0", features = ["wgsl"], optional = true }
bytemuck = { version = "1.19", features = ["derive"], optional = true }
hephaestus-core = { workspace = true, optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
# Optional plotting / immediate-mode UI surfaces.
plotly = { version = "0.8", optional = true }
egui = { version = "0.25", optional = true }
# Block-on for the GPU adapter/device requests in the visualization path.
pollster = { version = "0.4", optional = true }
# Bounded visualization frame channels; enabled only for the stream pipeline.
flume = { version = "0.11", optional = true }

[features]
gpu = ["kwavers-math/gpu", "kwavers-solver/gpu"]
plotting = ["dep:plotly"]
gpu-visualization = [
    "gpu",
    "plotting",
    "dep:wgpu",
    "dep:bytemuck",
    "dep:hephaestus-core",
    "dep:hephaestus-wgpu",
    "dep:pollster",
    "dep:egui",
    "dep:flume",
]
pinn = ["kwavers-solver/pinn"]

[dev-dependencies]
approx = "0.5"

[lints]
workspace = true
