[package]
name = "kwavers-boundary"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Boundary conditions for kwavers: CPML/PML absorbing layers, FEM/BEM, multiphysics coupling, periodic boundaries, smoothing"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
kwavers-core = { path = "../kwavers-core" }
kwavers-math = { path = "../kwavers-math" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-medium = { path = "../kwavers-medium" }
leto = { workspace = true }
moirai-parallel = { workspace = true }
ndarray = { version = "0.16", features = ["serde"] }
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[dev-dependencies]
approx = "0.5"

[lints]
workspace = true
