[package]
name = "kwavers-diagnostics"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Clinical diagnostic imaging workflows for kwavers: reconstruction pipelines, multi-modal fusion, Doppler, spectroscopy, functional ultrasound, decision support"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
kwavers-core = { path = "../kwavers-core", features = ["registration"] }
eunomia = { workspace = true }
kwavers-optics = { path = "../kwavers-optics" }
kwavers-math = { path = "../kwavers-math" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-imaging = { path = "../kwavers-imaging" }
kwavers-transducer = { path = "../kwavers-transducer" }
kwavers-receiver = { path = "../kwavers-receiver" }
kwavers-source = { path = "../kwavers-source" }
kwavers-boundary = { path = "../kwavers-boundary" }
kwavers-medium = { path = "../kwavers-medium" }
kwavers-physics = { path = "../kwavers-physics", features = ["clinical-imaging"] }
kwavers-solver = { path = "../kwavers-solver", features = ["clinical-imaging"] }
leto = { workspace = true }
# Concrete GPU backend (the breast-UST FWI adapter's GPU path routes through it).
kwavers-gpu = { path = "../kwavers-gpu", optional = true }
kwavers-analysis = { path = "../kwavers-analysis" }
moirai-parallel = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", features = ["attributes"] }
consus-hdf5 = { workspace = true }
consus-core = { workspace = true }
consus-io = { workspace = true }
flate2 = { workspace = true }
ritk-registration = { workspace = true }

[features]
gpu = ["dep:kwavers-gpu", "kwavers-gpu/gpu", "kwavers-math/gpu", "kwavers-solver/gpu", "kwavers-analysis/gpu"]
pinn = ["kwavers-solver/pinn", "kwavers-analysis/pinn"]

[dev-dependencies]
approx = "0.5"
tempfile = { workspace = true }

[lints]
workspace = true
