[package]
name = "kwavers-domain"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Domain model for kwavers: grid, medium, source, sensor, boundary, field, signal, imaging, therapy"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
kwavers-core = { path = "../kwavers-core", features = ["registration", "nifti"] }
kwavers-math = { path = "../kwavers-math" }
ndarray = { version = "0.16", features = ["rayon", "serde"] }
nalgebra = { version = "0.32" }
num-complex = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
anyhow = "1.0"
gaia = { workspace = true }
nifti = "0.17.0"
# Medical imaging I/O: DICOM via ritk-io (NdArray-backed burn tensors), registration.
ritk-registration = { workspace = true }
ritk-io = { workspace = true }
burn = { version = "0.19", features = ["ndarray"] }

[features]
# Exposes `plugin::test_support` for downstream crates' tests.
test-util = []

[dev-dependencies]
approx = "0.5"
proptest = "1.2"

[lints]
workspace = true
